Изменения в блоке advantages

--- a/index.html
+++ b/index.html
@@ -57,30 +57,51 @@
     </section>
 
     <section class="advantages">
-        <h2 class="advantages_header">Устали от серости и мегаполиса?</h2>
-        <h2 class="advantages_header">Нам есть, что вам предложить!</h2>
-        <ul class="advantages_list">
-            <li class="advantages_item">
-                <p class="advantages_item-header">Поднимает настроение</p>
-                <p class="advantages_item-text">Приложение позволит вам победить осеннюю хандру и депрессию буквально в
-                    несколько кликов!</p>
-            </li>
-            <li class="advantages_item">
-                <p class="advantages_item-header">Меняет мир вокруг вас</p>
-                <p class="advantages_item-text">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы
-                    усилить эффект</p>
-            </li>
-            <li class="advantages_item">
-                <p class="advantages_item-header">Заводит новых друзей</p>
-                <p class="advantages_item-text">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и
-                    заводите новых</p>
-            </li>
-            <li class="advantages_item">
-                <img src="https://user-images.githubusercontent.com/51093088/68207337-c2a69e00-ffdf-11e9-890a-d3571c55bc7a.png"
-                    alt="phone">
-            </li>
-        </ul>
+        <h3 class="advantages_header">Устали от серости и мегаполиса?</h2>
+        <h3 class="advantages_header">Нам есть, что вам предложить!</h2>
+        <div class="advantages_lists">
+            <ul class="advantages_list">
+                <li class="advantages_item-information">
+                    <p class="advantages_item-header">Поднимает настроение</p>
+                    <p class="advantages_item-text">Приложение позволит вам победить осеннюю хандру и депрессию
+                        буквально в несколько кликов!</p>
+                </li>
+                <li class="advantages_item-information">
+                    <p class="advantages_item-header">Меняет мир вокруг вас</p>
+                    <p class="advantages_item-text">Сделайте снимок и украсьте его смайликом или текстовой подписью,
+                        чтобы
+                        усилить эффект</p>
+                </li>
+                <li class="advantages_item-information">
+                    <p class="advantages_item-header">Заводит новых друзей</p>
+                    <p class="advantages_item-text">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и
+                        заводите новых</p>
+                </li>
+            </ul>
+            <ul class="advantages_list">
+                <li class="advantages_item-images">
+                    <img src="https://user-images.githubusercontent.com/51093088/68582132-12c3ab80-048b-11ea-9249-493a4174cdb2.png"
+                        alt="phone" class="advantages_item-image">
+                </li>
+                <li class="advantages_item-images">
+                    <img src="https://user-images.githubusercontent.com/51093088/68582130-10615180-048b-11ea-88a5-3f785953f788.png"
+                        alt="phone" class="advantages_item-image">
+                </li>
+                <li class="advantages_item-images">
+                    <img src="https://user-images.githubusercontent.com/51093088/68587236-a4391a80-0497-11ea-97b5-67e86d1f4e61.png"
+                        alt="phone" class="advantages_item-image">
+                </li>
+            </ul>
+        </div>
 
+        <div class="advantages_wrapper">
+            <img src="https://user-images.githubusercontent.com/51093088/68591914-d9973580-04a2-11ea-84b4-5a1cd5c65a42.png" alt="clock-24">
+            <div class="advantages_item">
+                <h2 class="">Эффект на 24 часа!</h2>
+                <p>Британские ученые провели исследования и доказали, что положительный эффект от использования приложения длится целые сутки!</p>
+                <button>Узнать больше об исследовании</button>
+            </div>
+        </div>
     </section>
 
     <section class="reviews">
@@ -142,7 +163,7 @@
     <footer class="footer">
         <p class="footer_text">Остались вопросы? Свяжитесь с нами!</p>
         <ul class="footer_list">
-            <li class="footer_item">
+            <li class="footer_information-item">
                 <p class="footer_item-text">Звоните:</p>
                 <p class="footer_item-info">+7 (812) 555-66-66</p>
             </li>
@@ -155,7 +176,11 @@
                 <p class="footer_item-info">ул. Большая Конюшенная, 19/8</p>
             </li>
         </ul>
-        <img src="#" alt="map">
+        <div class="footer_map">
+            <img src="https://user-images.githubusercontent.com/51093088/68572637-f9186900-0476-11ea-99b7-76a5d5e2fcb6.jpg"
+                alt="map" class="footer_map-image">
+        </div>
+
     </footer>
 </body>
 
