--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
     </section>
 
     <section class="advantages">
-        <h3 class="advantages_header">Устали от серости и мегаполиса?</h2>
-        <h3 class="advantages_header">Нам есть, что вам предложить!</h2>
+        <h3 class="advantages_header">Устали от серости и мегаполиса?</h3>
+        <h3 class="advantages_header">Нам есть, что вам предложить!</h3>
         <div class="advantages_lists">
             <ul class="advantages_list">
                 <li class="advantages_item-information">
@@ -68,9 +68,7 @@
                 </li>
                 <li class="advantages_item-information">
                     <p class="advantages_item-header">Меняет мир вокруг вас</p>
-                    <p class="advantages_item-text">Сделайте снимок и украсьте его смайликом или текстовой подписью,
-                        чтобы
-                        усилить эффект</p>
+                    <p class="advantages_item-text">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
                 </li>
                 <li class="advantages_item-information">
                     <p class="advantages_item-header">Заводит новых друзей</p>
@@ -97,9 +95,9 @@
         <div class="advantages_wrapper">
             <img src="https://user-images.githubusercontent.com/51093088/68591914-d9973580-04a2-11ea-84b4-5a1cd5c65a42.png" alt="clock-24">
             <div class="advantages_item">
-                <h2 class="">Эффект на 24 часа!</h2>
-                <p>Британские ученые провели исследования и доказали, что положительный эффект от использования приложения длится целые сутки!</p>
-                <button>Узнать больше об исследовании</button>
+                <h2 class="advantages_second-header">Эффект на 24 часа!</h2>
+                <p class="advantages_second-text">Британские ученые провели исследования и доказали, что положительный эффект от использования приложения длится целые сутки!</p>
+                <a href="#" class="advantages_link">Узнать больше об исследовании</a>
             </div>
         </div>
     </section>
