--- a/index.html
+++ b/index.html
@@ -13,52 +13,60 @@
 
 <body>
     <header class="header">
-        <a href="index.html" class="header_logo">
-            <img src="https://user-images.githubusercontent.com/51093088/68088296-d252a500-fe6e-11e9-9c69-215e315f8ad9.png"
-                alt="logo" class="header_logo-image">
-        </a>
-        <ul class="header_navigation">
-            <li class="header_navigation-list">
-                <a href="#" class="header_navigation-item">Главная</a>
-            </li>
-            <li class="header_navigation-list">
-                <a href="photo.html" class="header_navigation-item">Фотографии</a>
-            </li>
-            <li class="header_navigation-list">
-                <a href="form.html" class="header_navigation-item">Конкурс</a>
-            </li>
-            <li class="header_navigation-list">
-                <a href="#" class="header_navigation-item">HTML Academy</a>
-            </li>
-        </ul>
+        <div class="header_information">
+            <a href="index.html" class="header_logo">
+                <img src="https://user-images.githubusercontent.com/51093088/68088296-d252a500-fe6e-11e9-9c69-215e315f8ad9.png"
+                    alt="logo" class="header_logo-image">
+            </a>
+            <ul class="header_navigation">
+                <li class="header_navigation-list">
+                    <a href="#" class="header_navigation-item">Главная</a>
+                </li>
+                <li class="header_navigation-list">
+                    <a href="photo.html" class="header_navigation-item">Фотографии</a>
+                </li>
+                <li class="header_navigation-list">
+                    <a href="form.html" class="header_navigation-item">Конкурс</a>
+                </li>
+                <li class="header_navigation-list">
+                    <a href="#" class="header_navigation-item">HTML Academy</a>
+                </li>
+            </ul>
+        </div>
+
     </header>
 
     <section class="download">
-        <div class="download_image"></div>
-        <div class="download_information">
-            <h2 class="download_header">Взгляните на жизнь иначе!</h2>
-            <button class="download_button">Скачать приложение</button>
-            <div class="download_links">
-                <a href="#" class="download_link-item">
-                    <img src="https://user-images.githubusercontent.com/51093088/68205388-3d20ef00-ffdb-11e9-8eb0-5f1e92472768.png"
-                        alt="Apple">
-                </a>
-                <a href="#" class="download_link-item">
-                    <img src="https://user-images.githubusercontent.com/51093088/68205389-3d20ef00-ffdb-11e9-87e0-1b619d03d286.png"
-                        alt="Android">
-                </a>
-                <a href="#" class="download_link-item">
-                    <img src="https://user-images.githubusercontent.com/51093088/68205391-3d20ef00-ffdb-11e9-8b03-b5b172da1155.png"
-                        alt="Windows">
-                </a>
-                <p class="download_text">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
+        <div class="download_wrapper">
+            <div class="download_image"></div>
+            <div class="download_information">
+                <h2 class="download_header">Взгляните на жизнь иначе!</h2>
+                <button class="download_button">Скачать приложение</button>
+                <div class="download_links">
+                    <a href="#" class="download_link-item">
+                        <img src="https://user-images.githubusercontent.com/51093088/68205388-3d20ef00-ffdb-11e9-8eb0-5f1e92472768.png"
+                            alt="Apple">
+                    </a>
+                    <a href="#" class="download_link-item">
+                        <img src="https://user-images.githubusercontent.com/51093088/68205389-3d20ef00-ffdb-11e9-87e0-1b619d03d286.png"
+                            alt="Android">
+                    </a>
+                    <a href="#" class="download_link-item">
+                        <img src="https://user-images.githubusercontent.com/51093088/68205391-3d20ef00-ffdb-11e9-8b03-b5b172da1155.png"
+                            alt="Windows">
+                    </a>
+                    <p class="download_text">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
+                </div>
             </div>
         </div>
+
     </section>
 
     <section class="advantages">
-        <h3 class="advantages_header">Устали от серости и мегаполиса?</h3>
-        <h3 class="advantages_header">Нам есть, что вам предложить!</h3>
+        <div class="advantages_headers">
+            <h3 class="advantages_header">Устали от серости и мегаполиса?</h3>
+            <h3 class="advantages_header">Нам есть, что вам предложить!</h3>
+        </div>
         <div class="advantages_lists">
             <ul class="advantages_list">
                 <li class="advantages_item-information">
@@ -68,7 +76,8 @@
                 </li>
                 <li class="advantages_item-information">
                     <p class="advantages_item-header">Меняет мир вокруг вас</p>
-                    <p class="advantages_item-text">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
+                    <p class="advantages_item-text">Сделайте снимок и украсьте его смайликом или текстовой подписью,
+                        чтобы усилить эффект</p>
                 </li>
                 <li class="advantages_item-information">
                     <p class="advantages_item-header">Заводит новых друзей</p>
@@ -93,69 +102,74 @@
         </div>
 
         <div class="advantages_wrapper">
-            <img src="https://user-images.githubusercontent.com/51093088/68591914-d9973580-04a2-11ea-84b4-5a1cd5c65a42.png" alt="clock-24">
+            <img src="https://user-images.githubusercontent.com/51093088/68591914-d9973580-04a2-11ea-84b4-5a1cd5c65a42.png"
+                alt="clock-24">
             <div class="advantages_item">
                 <h2 class="advantages_second-header">Эффект на 24 часа!</h2>
-                <p class="advantages_second-text">Британские ученые провели исследования и доказали, что положительный эффект от использования приложения длится целые сутки!</p>
+                <p class="advantages_second-text">Британские ученые провели исследования и доказали, что положительный
+                    эффект от использования приложения длится целые сутки!</p>
                 <a href="#" class="advantages_link">Узнать больше об исследовании</a>
             </div>
         </div>
     </section>
 
     <section class="reviews">
-        <ul class="reviews_list">
-            <li class="reviews_item">
-                <p class="reviews_item-name">Николай Петров</p>
-                <p class="reviews_item-text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на
-                    привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной
-                    фотографии!»</p>
-            </li>
-            <li class="reviews_item">
-                <p class="reviews_item-name">Иванов Иван</p>
-                <p class="reviews_item-text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на
-                    привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной
-                    фотографии!»</p>
-            </li>
-            <li class="reviews_item">
-                <p class="reviews_item-name">Петров Петр</p>
-                <p class="reviews_item-text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на
-                    привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной
-                    фотографии!»</p>
-            </li>
-        </ul>
+        <div class="reviews-list">
+            <input type="radio" name="radio-item" class="reviews-radio" id="reviews-list-1" checked>
+            <input type="radio" name="radio-item" class="reviews-radio" id="reviews-list-2">
+            <input type="radio" name="radio-item" class="reviews-radio" id="reviews-list-3">
 
-        <input type="radio" name="review" id="first-review">
-        <input type="radio" name="review" id="second-review">
-        <input type="radio" name="review" id="third-review">
+            <ul class="reviews-information">
+                <li class="reviews-information_item reviews-information_item1">
+                    <p class="reviews_item-information">25 лет, водитель трамвая</p>
+                    <p class="reviews_item-name">Николай Петров</p>
+                    <p class="reviews_item-text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
+                </li>
+                <li class="reviews-information_item reviews-information_item2">
+                    <p class="reviews_item-information">30 лет, инженер</p>
+                    <p class="reviews_item-name">Иванов Иван</p>
+                    <p class="reviews_item-text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
+                </li>
+                <li class="reviews-information_item reviews-information_item3">
+                    <p class="reviews_item-information">20 лет, студент</p>
+                    <p class="reviews_item-name">Петров Петр</p>
+                    <p class="reviews_item-text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
+                </li>
+            </ul>
+        </div>
     </section>
 
     <section class="price">
+            <input type="radio" name="price_item" id="econom" class="price_radio">
+            <input type="radio" name="price_item" id="standart" class="price_radio" checked>
+            <input type="radio" name="price_item" id="plus" class="price_radio">
+
         <table class="price_table">
             <tr class="price_table-row">
-                <th class="price_table-header">Эконом 1,5 USD</th>
-                <th class="price_table-header">Стандарт 3,99 USD</th>
-                <th class="price_table-header">Плюс 5,45 USD</th>
+                <th class="price_table-header-hidden"></th>
+                <th class="price_table-header">База<p class="price_header-price">1,99 USD</p></th>
+                <th class="price_table-header">Стандарт<p class="price_header-price">3,99 USD</p></th>
+                <th class="price_table-header">Анлим<p class="price_header-price">9,99 USD</p></th>
             </tr>
             <tr class="price_table-row">
+                <td class="price_table-data table-data-hidden">Розовый фильтр</td>
                 <td class="price_table-data">Розовый фильтр</td>
                 <td class="price_table-data">Розовый фильтр</td>
                 <td class="price_table-data">Розовый фильтр</td>
             </tr>
             <tr class="price_table-row">
+                <td class="price_table-data table-data-hidden">Смайлики</td>
                 <td class="price_table-data">Смайлики</td>
                 <td class="price_table-data">Смайлики</td>
                 <td class="price_table-data">Смайлики</td>
             </tr>
             <tr class="price_table-row">
+                <td class="price_table-data table-data-hidden">Комментарии</td>
                 <td class="price_table-data">Комментарии</td>
                 <td class="price_table-data">Комментарии</td>
                 <td class="price_table-data">Комментарии</td>
             </tr>
         </table>
-
-        <input type="radio" name="price_item" id="econom">
-        <input type="radio" name="price_item" id="standart">
-        <input type="radio" name="price_item" id="plus">
     </section>
 
     <footer class="footer">
@@ -175,8 +189,32 @@
             </li>
         </ul>
         <div class="footer_map">
-            <img src="https://user-images.githubusercontent.com/51093088/68572637-f9186900-0476-11ea-99b7-76a5d5e2fcb6.jpg"
+            <img src="https://user-images.githubusercontent.com/51093088/68761383-02dfcf00-0625-11ea-8cbf-9f3c1196c123.jpg"
                 alt="map" class="footer_map-image">
+        </div>
+        <div class="footer_social">
+            <a href="#" class="footer_logo">
+                <img src="https://user-images.githubusercontent.com/51093088/68765110-168f3380-062d-11ea-873c-1c28cce4eae1.png" alt="logo" class="footer_logo-image">
+            </a>
+
+            <div class="footer_social-list">
+                <a href="#" class="footer_social-item">
+                    <img src="https://user-images.githubusercontent.com/51093088/68766117-4dfedf80-062f-11ea-8cfb-2d293b38e7c0.png" alt="twitter-link" class="footer_social-image">
+                </a>
+                <a href="#" class="footer_social-item">
+                    <img src="https://user-images.githubusercontent.com/51093088/68766116-4dfedf80-062f-11ea-98d7-89f4c3144b18.png" alt="facebook-link" class="footer_social-image">
+                </a>
+                <a href="#" class="footer_social-item">
+                    <img src="https://user-images.githubusercontent.com/51093088/68766115-4d664900-062f-11ea-86a4-ebc3223134f0.png" alt="youtoobe-link" class="footer_social-image">
+                </a>
+            </div>
+
+            <div class="footer_social-text">
+                <p class="social-text">Разработано</p>
+                <a href="#" class="social-link">
+                    <img src="https://user-images.githubusercontent.com/51093088/68766114-4d664900-062f-11ea-8b59-70d2e0d77167.png" alt="" class="social-link_image">
+                </a>
+            </div>
         </div>
 
     </footer>
